# photo_organiser

./: README.md  pyproject.toml
src/photo_organiser/: __main__.py  parser.py
