[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-organiser"
version = "0.1.0"
description = "A simple CLI app to group photos"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}

authors = [
  {name = "jmxor", email="jamesmrippeth@gmail.com"}
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Source" = "https://github.com/jmxor/photo_organiser"

[project.scripts]
photo-org = "photo_organiser.__main__:main"

[tool.setuptools]
